--- a/src/host/premake4.rc
+++ b/src/host/premake4.rc
@@ -8,6 +8,10 @@
 #   include "hgtip.h"
 #endif
 
+#ifndef IDR_MAINFRAME
+#define IDR_MAINFRAME 1
+#endif // IDR_MAINFRAME
+
 #ifdef _WIN32
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 #pragma code_page(1252)
@@ -47,3 +51,5 @@ BEGIN
         VALUE "Translation", 0x409, 1252
     END
 END
+
+IDR_MAINFRAME ICON "premake4.ico"
