Adjustments to premake.c to allow the debug version to run by default without --script, if the scripts are inside the src/ subfolder Adjustments to both premake.c and premake4.rc in order to allow overriding the version number Fix to path_translate which could end up modifying the keys of the table it iterated
--HG--
branch : WDS-build

--- a/Premake4.vs8.vcproj
+++ b/Premake4.vs8.vcproj
@@ -213,7 +213,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="1"
 				AdditionalIncludeDirectories="src\host\lua-5.1.4\src"
-				PreprocessorDefinitions="NDEBUG;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;HAVE_HGTIP"
+				PreprocessorDefinitions="NDEBUG;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;HAVE_HGTIP;PREMAKE_VERSION=4.4-wds"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
@@ -229,7 +229,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;HAVE_HGTIP"
+				PreprocessorDefinitions="NDEBUG;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_NO_DEPRECATE;HAVE_HGTIP;PREMAKE_VERSION=4.4-wds"
 				AdditionalIncludeDirectories="src\host\lua-5.1.4\src"
 			/>
 			<Tool
@@ -298,74 +298,6 @@
 			RelativePath="premake4.lua"
 			>
 		</File>
-		<Filter
-			Name="samples"
-			Filter=""
-			>
-			<Filter
-				Name="project"
-				Filter=""
-				>
-				<Filter
-					Name="CppConsoleApp"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CppConsoleApp\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="CppSharedLib"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CppSharedLib\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="CppStaticLib"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CppStaticLib\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="CppWindowedApp"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CppWindowedApp\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="CsConsoleApp"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CsConsoleApp\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="CsSharedLib"
-					Filter=""
-					>
-					<File
-						RelativePath="samples\project\CsSharedLib\premake4.lua"
-						>
-					</File>
-				</Filter>
-				<File
-					RelativePath="samples\project\premake4.lua"
-					>
-				</File>
-			</Filter>
-		</Filter>
 		<Filter
 			Name="scripts"
 			Filter=""
@@ -994,411 +926,6 @@
 				</File>
 				<File
 					RelativePath="src\tools\snc.lua"
-					>
-				</File>
-			</Filter>
-		</Filter>
-		<Filter
-			Name="tests"
-			Filter=""
-			>
-			<Filter
-				Name="actions"
-				Filter=""
-				>
-				<Filter
-					Name="codeblocks"
-					Filter=""
-					>
-					<File
-						RelativePath="tests\actions\codeblocks\codeblocks_files.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\codeblocks\environment_variables.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\codeblocks\test_filters.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="codelite"
-					Filter=""
-					>
-					<File
-						RelativePath="tests\actions\codelite\codelite_files.lua"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="make"
-					Filter=""
-					>
-					<File
-						RelativePath="tests\actions\make\test_make_escaping.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\make\test_make_linking.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\make\test_make_pch.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\make\test_makesettings.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\make\test_wiidev.lua"
-						>
-					</File>
-				</Filter>
-				<File
-					RelativePath="tests\actions\test_clean.lua"
-					>
-				</File>
-				<Filter
-					Name="vstudio"
-					Filter=""
-					>
-					<Filter
-						Name="cs2002"
-						Filter=""
-						>
-						<File
-							RelativePath="tests\actions\vstudio\cs2002\test_files.lua"
-							>
-						</File>
-					</Filter>
-					<Filter
-						Name="cs2005"
-						Filter=""
-						>
-						<File
-							RelativePath="tests\actions\vstudio\cs2005\buildevents.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\cs2005\projectelement.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\cs2005\projectsettings.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\cs2005\propertygroup.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\cs2005\test_files.lua"
-							>
-						</File>
-					</Filter>
-					<Filter
-						Name="sln2005"
-						Filter=""
-						>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\dependencies.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\header.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\layout.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\platforms.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\projectplatforms.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\sln2005\projects.lua"
-							>
-						</File>
-					</Filter>
-					<File
-						RelativePath="tests\actions\vstudio\test_vs200x_vcproj.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\vstudio\test_vs200x_vcproj_linker.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\vstudio\test_vs2010_flags.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\vstudio\test_vs2010_project_kinds.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\vstudio\test_vs2010_vcxproj.lua"
-						>
-					</File>
-					<Filter
-						Name="vc200x"
-						Filter=""
-						>
-						<File
-							RelativePath="tests\actions\vstudio\vc200x\debugdir.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc200x\header.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc200x\test_files.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc200x\test_filters.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc200x\test_mfc.lua"
-							>
-						</File>
-					</Filter>
-					<Filter
-						Name="vc2010"
-						Filter=""
-						>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_config_props.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_debugdir.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_files.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_filters.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_header.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_link_settings.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_links.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_mfc.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_output_props.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_pch.lua"
-							>
-						</File>
-						<File
-							RelativePath="tests\actions\vstudio\vc2010\test_project_refs.lua"
-							>
-						</File>
-					</Filter>
-				</Filter>
-				<Filter
-					Name="xcode"
-					Filter=""
-					>
-					<File
-						RelativePath="tests\actions\xcode\test_file_references.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\xcode\test_xcode4_project.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\xcode\test_xcode4_workspace.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\xcode\test_xcode_common.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\xcode\test_xcode_dependencies.lua"
-						>
-					</File>
-					<File
-						RelativePath="tests\actions\xcode\test_xcode_project.lua"
-						>
-					</File>
-				</Filter>
-			</Filter>
-			<Filter
-				Name="baking"
-				Filter=""
-				>
-				<File
-					RelativePath="tests\baking\test_merging.lua"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="base"
-				Filter=""
-				>
-				<File
-					RelativePath="tests\base\test_action.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_api.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_baking.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_config.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_config_bug.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_location.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_os.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_path.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_premake_command.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_table.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\base\test_tree.lua"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="folder"
-				Filter=""
-				>
-				<File
-					RelativePath="tests\folder\ok.lua"
-					>
-				</File>
-			</Filter>
-			<File
-				RelativePath="tests\pepperfish_profiler.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\premake4.lua"
-				>
-			</File>
-			<Filter
-				Name="project"
-				Filter=""
-				>
-				<File
-					RelativePath="tests\project\test_eachfile.lua"
-					>
-				</File>
-				<File
-					RelativePath="tests\project\test_vpaths.lua"
-					>
-				</File>
-			</Filter>
-			<File
-				RelativePath="tests\test_dofile.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_gmake_cpp.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_gmake_cs.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_keywords.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_platforms.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_premake.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_project.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_stress.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_string.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_targets.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_vs2002_sln.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\test_vs2003_sln.lua"
-				>
-			</File>
-			<File
-				RelativePath="tests\testfx.lua"
-				>
-			</File>
-			<Filter
-				Name="tools"
-				Filter=""
-				>
-				<File
-					RelativePath="tests\tools\test_gcc.lua"
 					>
 				</File>
 			</Filter>
