--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ Scratchpad.txt
 Unix Worksheet.worksheet
 project.bbprojectdata
 Premake4.tmproj
+Visual Lint/PC-lint/**.vlstatus
+*.lnt
+intermediate/**
+premake4.exe
+src/host/hgtip.h
+*.asc
+.vs/**
+
+.hg/
+premake4.rev-*.exe
